@@ -5,6 +5,8 @@ import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.stage.Stage;
 
+//Maclab run path
+// --module-path /Users/s3777242/Downloads/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
 public class MultipleStageDemo extends Application {
 
     @Override
